--- a/jvm-packages/xgboost4j/pom.xml
+++ b/jvm-packages/xgboost4j/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>ml.dmlc</groupId>
         <artifactId>xgboost-jvm</artifactId>
-        <version>0.8-SNAPSHOT</version>
+        <version>0.8.9-SNAPSHOT</version>
     </parent>
     <artifactId>xgboost4j</artifactId>
-    <version>0.8-SNAPSHOT</version>
+    <version>0.8.9-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -22,13 +22,13 @@
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_${scala.binary.version}</artifactId>
-            <version>2.3.11</version>
-            <scope>compile</scope>
+            <version>2.5.11</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-testkit_${scala.binary.version}</artifactId>
-            <version>2.3.11</version>
+            <version>2.5.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
