--- a/jvm-packages/pom.xml
+++ b/jvm-packages/pom.xml
@@ -227,12 +227,12 @@
         </plugins>
     </build>
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>com.esotericsoftware.kryo</groupId>-->
-<!--            <artifactId>kryo</artifactId>-->
-<!--            <version>2.21</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.2</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
